--- a/src/styles.css
+++ b/src/styles.css
@@ -5,9 +5,61 @@
 html {
   font-family: "Poppins", sans-serif;
   font-size: 16px;
+  height: 100%;
 }
 
 .background {
+  margin: 0;
+  height: 100%;
   background-color: hsl(0, 100%, 74%);
-  background-image: bg-intro-mobile.png;
+  /*background-image: url("images/bg-intro-mobile.png");*/
+}
+
+/*.background-image {
+  height: 100%;
+  margin: 0;
+}*/
+
+.container {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+
+.info-container {
+  text-align: center;
+  color: white;
+}
+
+.advertisement-container {
+  background-color: hsl(248, 32%, 49%);
+  text-align: center;
+}
+
+.advertisement {
+  color: white;
+}
+
+.info-and-form {
+  align-items: center;
+}
+.form-container {
+  background-color: white;
+}
+
+.input-label::placeholder {
+  color: hsl(249, 10%, 26%);
+}
+
+.claim-button {
+  display: block;
+  margin: 0 auto;
+  text-align: center;
+  background-color: hsl(154, 59%, 51%);
+  color: white;
+}
+
+.terms-and-services {
+  text-align: center;
+  color: hsl(246, 25%, 77%);
 }
