--- a/src/styles.css
+++ b/src/styles.css
@@ -24,6 +24,7 @@ html {
   display: flex;
   flex-direction: column;
   height: 100%;
+  margin: 0 1rem;
 }
 
 .info-container {
@@ -32,12 +33,22 @@ html {
 }
 
 .advertisement-container {
+  display: block;
   background-color: hsl(248, 32%, 49%);
-  text-align: center;
+  height: 4rem;
+  border-radius: 10px;
 }
 
 .advertisement {
   color: white;
+  font-weight: 400;
+  padding-left: 4rem;
+  padding-right: 4rem;
+  text-align: center;
+}
+
+span.offer {
+  font-weight: 700;
 }
 
 .info-and-form {
@@ -51,12 +62,24 @@ html {
   color: hsl(249, 10%, 26%);
 }
 
+.alert {
+  display: none;
+}
+
+.alert-image {
+  display: none;
+}
+
 .claim-button {
   display: block;
   margin: 0 auto;
   text-align: center;
   background-color: hsl(154, 59%, 51%);
   color: white;
+}
+
+.claim-button:hover {
+  cursor: pointer;
 }
 
 .terms-and-services {
